# octonion

./: .gitignore  CLAUDE.md  Containerfile  Makefile  README.md  docker-compose.yml  mkdocs.yml  octonionic-ml-thesis.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  docs.yml  release.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/debug/: cifar-benchmark-issues.md  cifar10-repro-target-miss.md  qbn-no-name-attr.md  real-network-param-explosion.md  tril-to-symmetric-signature-mismatch.md
.planning/debug/resolved/: dtype-mismatch-einsum.md  exp-log-imag-on-real-tensor.md  float32-precision-noise-identity.md  no-module-octonion-pytest.md  uat3-octonion-wrapping-octonion.md
.planning/phases/01-octonionic-algebra/: 01-00-PLAN.md  01-00-SUMMARY.md  01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-05-PLAN.md  01-05-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-UAT-v2.md  01-UAT.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-ghr-calculus/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-UAT.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-baseline-implementations/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-05-SUMMARY.md  03-06-PLAN.md  03-06-SUMMARY.md  03-07-PLAN.md  03-07-SUMMARY.md  03-08-PLAN.md  03-08-SUMMARY.md  03-09-PLAN.md  03-09-SUMMARY.md  03-10-PLAN.md  03-10-SUMMARY.md  03-11-PLAN.md  03-11-SUMMARY.md  03-12-PLAN.md  03-12-SUMMARY.md  03-13-PLAN.md  03-14-PLAN.md  03-15-PLAN.md  03-CONTEXT.md  03-RESEARCH-performance.md  03-RESEARCH.md  03-UAT.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-numerical-stability/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-UAT.md  04-VALIDATION.md  04-VERIFICATION.md
.planning/phases/05-optimization-landscape/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-04-PLAN.md  05-04-SUMMARY.md  05-05-PLAN.md  05-05-SUMMARY.md  05-06-PLAN.md  05-07-PLAN.md  05-07-SUMMARY.md  05-08-PLAN.md  05-08-SUMMARY.md  05-CONTEXT.md  05-RESEARCH-gaps.md  05-RESEARCH.md  05-VALIDATION.md
.planning/phases/T1-benchmark-generalization/: T1-01-PLAN.md  T1-01-SUMMARY.md  T1-02-PLAN.md  T1-02-SUMMARY.md  T1-03-PLAN.md  T1-03-SUMMARY.md  (+6 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: gen_ref_pages.py  index.md
docs/api/: calculus.md  core.md  trie.md
docs/getting-started/: installation.md  quickstart.md
docs/ghr-calculus/: ghr-calculus-octonions.aux  ghr-calculus-octonions.out  ghr-calculus-octonions.tex  ghr-calculus-octonions.toc
docs/guide/: algebra.md  trie.md
docs/thesis/: LITREVIEW-AUDIT-R2.md  LITREVIEW-AUDIT.md  Makefile  SUMMARY.md  main.bbl  main.blg  main.tex  oct-neural-nets.aux  oct-neural-nets.out  oct-neural-nets.toc  oct-trie.aux  oct-trie.bbl  oct-trie.blg  oct-trie.out  oct-trie.tex  oct-trie.toc  references.bib
results/: naive_vs_correct.json  parenthesization_report.json
results/landscape/: full_report.json  gate_verdict.json
results/stability/: condition_numbers.json  depth_sweep.json  mitigation.json
scripts/: analyze_landscape.py  analyze_stability.py  container-shell.sh  demo_naive_vs_correct.py  profile_baseline.py  run_cifar_reproduction.py  run_landscape.py  run_post_analysis.py  run_trie_benchmark_summary.py  run_trie_benchmarks_parallel.py  run_trie_cifar10.py  run_trie_fashion_mnist.py  run_trie_mnist.py  run_trie_mnist_experiments.py  run_trie_prototype.py  run_trie_text.py  run_trie_validation.py  trie_benchmark_utils.py  validate_prop95.py  validate_trie337.py
scripts/sweep/: __init__.py  cache_features.py  run_adaptive_sweep.py  run_global_sweep.py  run_hybrid_validation.py  run_meta_trie_sweep.py  run_purity_sweep.py  sweep_analysis.py  sweep_diagnostics.py  sweep_plots.py  sweep_runner.py
scripts/theory/: monte_carlo_assoc.py
src/octonion/: __init__.py  _cayley_dickson.py  _fano.py  _linear.py  _linear_algebra.py  _multiplication.py  _octonion.py  _operations.py  _random.py  _tower.py  _types.py  trie.py
tests/: conftest.py  test_algebraic_properties.py  test_analyticity.py  test_autograd.py  test_baselines_comparison.py  test_baselines_components.py  test_baselines_linear.py  test_baselines_network.py  test_baselines_reproduction.py  test_baselines_rnn.py  test_baselines_trainer.py  test_batch.py  test_cayley_dickson.py  test_composition.py  test_dense_mixing.py  test_edge_cases.py  test_exp_log_robustness.py  test_ghr.py  test_gpu_parity.py  test_jacobians.py  test_landscape_hessian.py  test_landscape_integration.py  test_landscape_optimizer_integration.py  test_landscape_smoke.py  test_landscape_tasks.py  test_linear.py  test_linear_algebra.py  test_multiplication.py  test_numerical_stability.py  test_octonion_class.py  test_operations.py  test_perf_equivalence.py  test_phm_linear.py  test_property_identities.py  test_proximity_bounds.py  test_random.py  test_sweep_runner.py  test_thesis_claims.py  test_threshold_policy.py  test_tower.py  (+3 more)
tests/benchmarks/: bench_multiplication.py
(+138 files in other folders)
