[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "octonion"
version = "0.1.0"
description = "PyTorch-native octonionic algebra for ML research"
requires-python = ">=3.12"
dependencies = [
    "geoopt>=0.5.1",
    "matplotlib>=3.10.8",
    "optuna>=4.7.0",
    "pytorch-optimizer>=3.10.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "torch>=2.7",
    "torchinfo>=1.8.0",
]

[tool.uv]
# torch and triton are provided by the ROCm dev container (/opt/venv/).
# Prevent uv from installing PyPI's CUDA builds which shadow the ROCm ones.
# The container's packages are made visible via .pth file (see Containerfile).
exclude-dependencies = ["torch", "triton"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-timeout",
    "hypothesis>=6.0",
    "hypothesis-torch",
    "numpy>=1.26",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/octonion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-x --tb=short -s"
markers = [
    "slow: marks tests as slow (hours-long GPU training runs)",
]

[tool.hypothesis]
database_backend = "directory"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.12"
